remove old install script and tools tests

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js",
-    "install": "npm run compile && node ./out/scripts/install.js"
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/download": "^8.0.1",
