--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,12 +13,20 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
     - name: Install Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '16'
+
+    - name: Setup Docker (for MacOS)
+      uses: docker-practice/actions-setup-docker@master
+      if: runner.os == 'macOS'
+
     - run: npm install
+
     - run: xvfb-run -a npm test
       if: runner.os == 'Linux'
+
     - run: npm test
       if: runner.os != 'Linux'
