--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,8 @@ jobs:
       uses: docker-practice/actions-setup-docker@master
       if: runner.os == 'macOS'
 
-    - run: "%programfiles%\docker\docker\dockercli" -SwitchDaemon
+    - run: |
+        "%programfiles%\docker\docker\dockercli" -SwitchDaemon
       if: runner.os == 'Windows'
 
     - run: npm install
