--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Switch Windows Docker Daemon to Linux Images
       run: |
-        %programfiles%\docker\docker\dockercli.exe -SwitchDaemon
+        C:\Program Files\docker\docker\dockercli.exe -SwitchDaemon
       if: runner.os == 'Windows'
 
     - run: npm install
