--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,13 +8,11 @@
     "plugins": [
         "@typescript-eslint"
     ],
+    "extends": [
+        "eslint:recommended"
+    ],
     "rules": {
-        "@typescript-eslint/naming-convention": "warn",
-        "@typescript-eslint/semi": "warn",
-        "curly": "warn",
-        "eqeqeq": "warn",
-        "no-throw-literal": "warn",
-        "semi": "off"
+        "no-undef": "off"
     },
     "ignorePatterns": [
         "out",
