--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:mfsc.compileSoC"
+    "onCommand:mfsc.compileSoC",
+    "onCommand:mfsc.uploadSoC"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -18,6 +19,10 @@
       {
         "command": "mfsc.compileSoC",
         "title": "MFSC: Compile SoC"
+      },
+      {
+        "command": "mfsc.uploadSoC",
+        "title": "MFSC: Upload SoC"
       }
     ]
   },
