--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "glob": "^7.2.0",
     "mocha": "^9.1.3",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "download": "^8.0.0"
   }
 }
