--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "recursive-copy": "^2.0.13"
+    "recursive-copy": "^2.0.13",
+    "serialport": "^10.4.0"
   }
 }
